--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="ScoreRef.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SoloGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MatchGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SpeedTypingCnt.cpp">
@@ -48,6 +54,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ScoreRef.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SoloGame.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MatchGame.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
