약간의 수정

--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj
@@ -76,6 +76,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\mysql-8.0.18-winx64\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\mysql-8.0.18-winx64\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -96,6 +98,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>libmysql.lib;</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
