--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="SpeedTypingCntDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CDlgConnect.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SpeedTypingCnt.cpp">
@@ -72,6 +75,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="MatchGame.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlgConnect.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
