--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj
@@ -186,6 +186,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArrayList.h" />
     <ClInclude Include="CDlgConnect.h" />
     <ClInclude Include="CDlgLogin.h" />
     <ClInclude Include="CSocCom.h" />
