--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="SoloGame.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Search.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SearchShow.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SpeedTypingCnt.cpp">
@@ -81,6 +87,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SpeedTypingCntDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Search.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SearchShow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
