--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
@@ -111,6 +111,7 @@
     <None Include="res\SpeedTypingCnt.rc2">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\SpeedTypingCnt.ico">
