--- a/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
+++ b/SpeedTypingCnt/SpeedTypingCnt/SpeedTypingCnt.vcxproj.filters
@@ -54,6 +54,15 @@
     <ClInclude Include="SoloGame.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Search.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SearchShow.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SoloGameEng.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SpeedTypingCnt.cpp">
@@ -68,9 +77,6 @@
     <ClCompile Include="CSocCom.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="SpeedTypingCntDlg.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="ScoreRef.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -83,6 +89,18 @@
     <ClCompile Include="SoloGame.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="SpeedTypingCntDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SoloGameEng.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Search.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SearchShow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SpeedTypingCnt.rc">
@@ -93,6 +111,7 @@
     <None Include="res\SpeedTypingCnt.rc2">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\SpeedTypingCnt.ico">
